--- a/test/LSL.Resources.Tests/LSL.Resources.Tests.csproj
+++ b/test/LSL.Resources.Tests/LSL.Resources.Tests.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="LSL.Resources.DotNetFiddle" Version="1.0.3" />
     <PackageReference Include="Newtonsoft.JSON" Version="13.0.3" />
     <PackageReference Include="nunit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
@@ -26,7 +27,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources/**/*.*" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\LSL.Resources\LSL.Resources.csproj" />
   </ItemGroup>
